--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,3 +6,5 @@
   border: 2px solid blue;
   background-color:rgb("100,0,0");
 }
+html{
+  background-img:url("http://hd.wallpaperswide.com/thumbs/sanic-t2.jpg")
